<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_fill"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart_black"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_fill"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_shopping_fill"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_auth_redirect"
        android:icon="@drawable/ic_user_fill"
        android:title="@string/title_profile" />

</menu>