...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- RecyclerView for Product Grid -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="40dp"
        app:layout_constraintTop_toBottomOf="@+id/favorite_toolbar"
...
