...
                app:boxStrokeColor="#E0E0E0"
                app:endIconMode="clear_text"
                app:endIconTint="#757575"
                app:hintTextColor="#757575">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
...
